<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.RegistrationActivity"
    android:background="@drawable/backall"
    >

    <ImageView
        android:id="@+id/pick1"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:src="@drawable/pick1"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"/>

    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100">

        <ImageView
            android:onClick="back"
            android:layout_marginTop="8dp"
            android:id="@+id/addSongsButton"
            android:padding="8dp"
            android:layout_marginLeft="10dp"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/back"
            />

        <TextView
            android:layout_marginTop="19dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:text="@string/btn_registration"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ImageView
            android:layout_marginTop="8dp"
            android:layout_marginRight="10dp"
            android:id="@+id/burgerButton"
            android:padding="8dp"
            android:background="?selectableItemBackgroundBorderless"
            android:layout_width="47dp"
            android:layout_height="35dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/burgerwhite"
            android:onClick="goToMenu" />
    </RelativeLayout>





    <LinearLayout
        android:id="@+id/facebook"
        android:layout_below="@+id/pick1"
        android:onClick="signUpWithFacebook"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/button"
        android:gravity="center_vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_marginLeft="28dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/facebooklogo"
            android:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/facebook"
            android:layout_marginLeft="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/twitter"
        android:layout_below="@+id/facebook"
        android:onClick="signUpWithEmail"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/button"
        android:gravity="center_vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_marginLeft="28dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/twitterlogo"
            android:tint="@android:color/white" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/twitter"
            android:layout_marginLeft="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white" />


    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/twitter"
        android:onClick="signUpWithEmail"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:background="@drawable/button"
        android:gravity="center_vertical"
        android:layout_gravity="center">

        <ImageView
            android:layout_marginLeft="28dp"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/maillogo"
            android:tint="@android:color/white" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sign_email"
            android:layout_marginLeft="15dp"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textColor="@color/white" />


    </LinearLayout>

</RelativeLayout>